hopefully fixed spacing of homepage

--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,33 @@ body {
     font-size: 2.5em;
     margin-bottom: 15px;
   }
+
+  .info2 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    max-width: 1200px;
+    margin: 50px auto;
+    margin-top: 20px;
+    padding: 20px;
+  }
+  
+  .info2-text {
+    flex: 1;
+    padding: 20px;
+    background-color: #293241;
+    color: #FAF9F6;
+    text-align: center;
+    border-radius: 10px; /* Adds soft corners */
+  }
+  
+  .info2-text h2 {
+    color: #FAF9F6;
+    font-size: 2.5em;
+    margin-bottom: 15px;
+  }
   
   .explore-button {
     display: inline-block;
